# mygame

./: .clang-format  .gitignore  CLAUDE.md  CLAUDE_PERS.md  CMakeLists.txt  CODE_AUDIT.md  IDEAS.md  PERS.md  TODO.md  font.bdf  main.cpp  vcpkg.json
include/: AiComponent.hpp  BasicDungeonGenerator.hpp  CharacterCreationMenu.hpp  CharacterCreationWindow.hpp  Colors.hpp  Command.hpp  Components.hpp  ConfigManager.hpp  Configuration.hpp  DynamicSpawnSystem.hpp  Effect.hpp  Engine.hpp  Entity.hpp  EntityFactory.hpp  EntityManager.hpp  EntityTemplate.hpp  Event.hpp  EventHandler.hpp  GridNavigator.hpp  HealthBar.hpp  InventoryMode.hpp  InventoryWindow.hpp  Item.hpp  ItemSelectionWindow.hpp  KeyPress.hpp  LevelConfig.hpp  ListMenu.hpp  LocaleManager.hpp  Map.hpp  MapGenerator.hpp  Menu.hpp  MenuBase.hpp  MenuFactory.hpp  MenuStack.hpp  MenuWindow.hpp  Message.hpp  MessageHistoryWindow.hpp  MessageLog.hpp  MessageLogWindow.hpp  PathFinding.hpp  (+18 more)
src/: AiComponent.cpp  BasicDungeonGenerator.cpp  CharacterCreationMenu.cpp  CharacterCreationWindow.cpp  Command.cpp  Components.cpp  ConfigManager.cpp  DynamicSpawnSystem.cpp  Effect.cpp  Engine.cpp  Entity.cpp  EntityFactory.cpp  EntityManager.cpp  EntityTemplate.cpp  Event.cpp  EventHandler.cpp  GridNavigator.cpp  HealthBar.cpp  InventoryWindow.cpp  Item.cpp  ItemSelectionWindow.cpp  LevelConfig.cpp  ListMenu.cpp  LocaleManager.cpp  Map.cpp  MapGenerator.cpp  Menu.cpp  MenuFactory.cpp  MenuStack.cpp  MenuWindow.cpp  MessageHistoryWindow.cpp  MessageLog.cpp  MessageLogWindow.cpp  PathFinding.cpp  PickupWindow.cpp  Position.cpp  Room.cpp  SaveManager.cpp  SpawnTable.cpp  SpellMenuWindow.cpp  (+10 more)
tests/: test_dice.cpp
(+28 files in other folders)
